added images to portfolio cards

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div class="portfolio-project-container happy-days">
         <h2 class="project-title">Happy Days</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="/public/images/projects/img_happydays_7.png" alt="happy-days-image" class="project-image">
         </div>
         <p class="project-description">
           An android application that promotes a healthy lifestyle for the citizens of New Westminster. The app accomplishes this by providing users with the ability to log their days in order to look back at the "Happy Days" when they are feeling down
@@ -152,7 +152,7 @@
       <div class="portfolio-project-container freshfridge">
         <h2 class="project-title">FreshFridge</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="public/images/projects/img_freshfridge_1.png" alt="freshfridge-image" class="project-image">
         </div>
         <p class="project-description">
           A mobile responsive web application built using Node/Express that aims to reduce food waste by allowing users to search recipes based on the food ingredients that are about to expire in their fridge.
@@ -179,7 +179,7 @@
       <div class="portfolio-project-container android-gps">
         <h2 class="project-title">Android GPS</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="public/images/projects/img_androidgps_main.png" alt="android-gps-image" class="project-image">
         </div>
         <p class="project-description">
           An android application that aims to demonstrate how network programming works in Java and also experiment with the AndroidSDK and Google Maps API.
@@ -203,7 +203,7 @@
       <div class="portfolio-project-container file-transfer">
         <h2 class="project-title">File Transfer Application</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="public/images/projects/img_filetransfer_1.png" alt="file-transfer-image" class="project-image">
         </div>
         <p class="project-description">
           A windows desktop application made using C++ that demonstrates the differences between TCP and UDP under various conditions. The application accompishes this by sending files of varying sizes between two computers in a LAN and collecting data such as packet loss and transfer speed.
@@ -224,7 +224,7 @@
       <div class="portfolio-project-container badgebook">
         <h2 class="project-title">BadgeBook</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="public/images/projects/img_badgebook_main.png" alt="badgebook-image" class="project-image">
         </div>
         <p class="project-description">
           A mobile friendly social media web application built using C# and ASP.NET Core that allows users to keep track of Badges they have recieved from another authenticated website built by other team members.
@@ -246,7 +246,7 @@
       <div class="portfolio-project-container java-chess">
         <h2 class="project-title">Chess Game</h2>
         <div class="portfolio-image-container">
-          <img src="" alt="happy-days-image" class="project-image">
+          <img src="public/images/projects/img_chessgame_main.PNG" alt="chess-game-image" class="project-image">
         </div>
         <p class="project-description">
           A Chess Game build using Java and the JavaFX GUI library.
