changed project technologies to grid layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </nav>
   <header id="home">
     <div class="header-container">
-      <h1 class="head-title">Hi my name is <b>Viktor Alvar</b></h1>
-      <h3 class="head-subtitle">Full Stack Web Developer</h3>
+      <h1 class="head-title">Hi my name is <b>Viktor</b></h1>
+      <h3 class="head-subtitle">Software Developer</h3>
       <button class="action-button">check out my portfolio</button>
     </div>
   </header>
@@ -88,7 +88,7 @@
         <ul>
           <li>Joined a small startup with a team of four students as part of a school project practicum</li>
           <li>Redeveloped an existing event management feature to be more user-friendly using React</li>
-          <li>Imporved the efficiency and workflow for event coordiniators on the platform by displaying a lost of volunteer applications that they can accept with  single click</li>
+          <li>Improved the efficiency and workflow for event coordiniators on the platform by displaying a lost of volunteer applications that they can accept with  single click</li>
         </ul>
       </div>
     </div>
@@ -140,7 +140,7 @@
           <h3>Technologies Used:</h3>
           <div class="technologies-used-container">
             <div>Java</div>
-            <div>Android SDK</div>
+            <div>Android</div>
           </div>
         </div>
         <div class="external-links">
@@ -188,7 +188,7 @@
           <h3>Technologies Used:</h3>
           <div class="technologies-used-container">
             <div>Java</div>
-            <div>Android SDK</div>
+            <div>Android</div>
             <div>Node</div>
             <div>React</div>
             <div>MongoDB</div>
