increased section title font size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="header-container">
       <h1 class="head-title">Hi my name is <b>Viktor</b></h1>
       <h3 class="head-subtitle">Software Developer</h3>
-      <button class="action-button">check out my portfolio</button>
+      <button href="#portfolio" class="action-button">check out my portfolio</button>
     </div>
   </header>
   <section class="page-section" id="about-me">
