converted button to anchor tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav class="navbar">
     <div class="switch-toggle">
       <label class="switch">
-        <input type="checkbox" checked>
+        <input type="checkbox">
         <span class="slider round"></span>
       </label>
     </div>
@@ -26,7 +26,7 @@
     <div class="header-container">
       <h1 class="head-title">Hi my name is <b>Viktor</b></h1>
       <h3 class="head-subtitle">Software Developer</h3>
-      <button href="#portfolio" class="action-button">check out my portfolio</button>
+      <a href="#portfolio" class="action-button">check out my portfolio</a>
     </div>
   </header>
   <section class="page-section" id="about-me">
@@ -162,7 +162,7 @@
           <div class="technologies-used-container">
             <div>HTML</div>
             <div>CSS</div>
-            <div>JavaScripts</div>
+            <div>JavaScript</div>
             <div>Node</div>
             <div>Express</div>
           </div>
